cargo.log
   Compiling ascii-cam v0.1.0 (/home/crunch/ascii-cam)
error[E0107]: struct takes 3 generic arguments but 2 generic arguments were supplied
   --> src/audio.rs:146:39
    |
146 | type RbProd = ringbuf::wrap::caching::Caching<Arc<ringbuf::storage::Heap<f32>>, true>;
    |                                       ^^^^^^^ --------------------------------  ---- supplied 2 generic arguments
    |                                       |
    |                                       expected 3 generic arguments
    |
note: struct defined here, with 3 generic parameters: `R`, `P`, `C`
   --> /home/crunch/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ringbuf-0.4.8/src/wrap/caching.rs:17:12
    |
 17 | pub struct Caching<R: RbRef, const P: bool, const C: bool> {
    |            ^^^^^^^ -         -------------  -------------
help: add missing generic argument
    |
146 | type RbProd = ringbuf::wrap::caching::Caching<Arc<ringbuf::storage::Heap<f32>>, true, C>;
    |                                                                                     +++

error[E0599]: no method named `occupied_len` found for struct `Caching<R, P, C>` in the current scope
  --> src/audio.rs:75:34
   |
75 |             let available = cons.occupied_len();
   |                                  ^^^^^^^^^^^^
   |
  ::: /home/crunch/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ringbuf-0.4.8/src/traits/observer.rs:48:8
   |
48 |     fn occupied_len(&self) -> usize {
   |        ------------ the method is available for `Caching<Arc<SharedRb<Heap<f32>>>, false, true>` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Observer` which provides `occupied_len` is implemented but not in scope; perhaps you want to import it
   |
 1 + use ringbuf::traits::Observer;
   |
help: there is a method `occupied_slices` with a similar name
   |
75 -             let available = cons.occupied_len();
75 +             let available = cons.occupied_slices();
   |

Some errors have detailed explanations: E0107, E0599.
For more information about an error, try `rustc --explain E0107`.
error: could not compile `ascii-cam` (bin "ascii-cam") due to 2 previous errors
